5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1795_1599.log
== TEST (2019-05-30 16:16:16) 
-- CODE:
from numpy import*

velor = array(float(input('vetores: ')))

i =0

while 1 < size(valor):
	if valor[i] > 80
	soma = sum(valor) -80
	else:
		soma = sum(valor)
	i = i +1
	print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    if valor[i] > 80
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:30) 
-- CODE:
from numpy import*

velor = array(float(input('vetores: ')))

i =0

while 1 < size(valor):
	if valor[i] > 80
	soma = sum(valor) 80
	else:
		soma = sum(valor)
	i = i +1
	print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    if valor[i] > 80
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:10) 
-- CODE:
from numpy import*

velor = array(float(input('vetores: ')))

i =0

while 1 < size(valor):
	if valor[i] > 80
	soma = sum(valor) < 80
	else:
		soma = sum(valor)
	i = i +1
	print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    if valor[i] > 80
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:41) 
-- CODE:
from numpy import*

velor = array(float(input('vetores: ')))

i =0

while 1 < size(valor):
	if valor[i] < 80
	soma = sum(valor) -80
	else:
		soma = sum(valor)
	i = i +1
	print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    if valor[i] < 80
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:00) 
-- CODE:
from numpy import*

velor = array(float(input('vetores: ')))

i =0

while 1 < size(valor):
	if valor[i] < 00
	soma = sum(valor) -80
	else:
		soma = sum(valor)
	i = i +1
	print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    if valor[i] < 00
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:19:26) 
-- CODE:
from numpy import*

velor = array(float(input('vetores: ')))

i =0

while 1 < size(valor):
	if valor[i] > 80
	soma = sum(valor) -80
	else:
		soma = sum(valor)
	i = i +1
	print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    if valor[i] > 80
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:19:38) 
-- CODE:
from numpy import*

velor = array(float(input('vetores: ')))

i =0

while  i < size(valor):
	if valor[i] > 80
	soma = sum(valor) -80
	else:
		soma = sum(valor)
	i = i +1
	print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    if valor[i] > 80
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:01) 
-- CODE:
from numpy import*

velor = array(float(input('vetores: ')))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma = sum(valor) -80
	else:
		soma = sum(valor)
	i = i +1
	print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:20:54) 
-- CODE:
from numpy import*

velor = array(float(input('vetores: ')))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma = sum(valor) -80
	else:
		soma = sum(valor)
	i = i +1
	print(round(soma,2))

-- EXECUTION TIME:
0.601592
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 3, in <module>
    velor = array(float(input()))
ValueError: could not convert string to float: '[11.32,40.2,32,0]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:21) 
-- CODE:
from numpy import*

velor = array(float(input('vetores: ')))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma = sum(valor) -80
	else:
		soma = sum(valor)
	i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:46) 
-- CODE:
from numpy import*

velor = array(float(input('vetores: ')))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma = sum(valor) -80
	else:
		soma = sum(valor)
	i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:22:15) 
-- CODE:
from numpy import*

velor = array(float(input('vetores: ')))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma = sum(valor) -80
	else:
		soma = sum(valor)
	i = i +1
print(round(soma,2))

-- EXECUTION TIME:
0.494052
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 3, in <module>
    velor = array(float(input()))
ValueError: could not convert string to float: '[11.32,40.2,32,0]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:37) 
-- CODE:
from numpy import*

velor = array(float(input('vetores: ')))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma=sum(valor)-80
	else:
		soma=sum(valor)
	i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:22:44) 
-- CODE:
from numpy import*

velor = array(float(input('vetores: ')))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma=sum(valor)-80
	else:
		soma=sum(valor)
	i = i +1
print(round(soma,2))

-- EXECUTION TIME:
0.444076
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 3, in <module>
    velor = array(float(input()))
ValueError: could not convert string to float: '[11.32,40.2,32,0]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:01) 
-- CODE:
from numpy import*

velor = array(input('vetores: '))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma=sum(valor)-80
	else:
		soma=sum(valor)
	i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:23:07) 
-- CODE:
from numpy import*

velor = array(input('vetores: '))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma=sum(valor)-80
	else:
		soma=sum(valor)
	i = i +1
print(round(soma,2))

-- EXECUTION TIME:
0.535896
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 7, in <module>
    while  i < size(valor):
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:23:24) 
-- CODE:
from numpy import*

velor = array(eval(input('vetores: ')))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma=sum(valor)-80
	else:
		soma=sum(valor)
	i = i +1
print(round(soma,2))

-- EXECUTION TIME:
0.427879
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 7, in <module>
    while  i < size(valor):
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:25) 
-- CODE:
from numpy import*

velor = array(eval(input('vetores: ')))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma=sum(valor)-80
	else:
		soma=sum(valor)
	i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:23:32) 
-- CODE:
from numpy import*

velor = array(eval(input('vetores: ')))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma=sum(valor)-80
	else:
		soma=sum(valor)
	i = i +1
print(round(soma,2))

-- EXECUTION TIME:
0.489115
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 7, in <module>
    while  i < size(valor):
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:51) 
-- CODE:
from numpy import*

valor = array(input('vetores: '))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma=sum(valor)-80
	else:
		soma=sum(valor)
	i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:23:57) 
-- CODE:
from numpy import*

valor = array(input('vetores: '))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma=sum(valor)-80
	else:
		soma=sum(valor)
	i = i +1
print(round(soma,2))

-- EXECUTION TIME:
0.341737
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:24) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val)-80
	else:
		soma=sum(val)
	i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:24:30) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val)-80
	else:
		soma=sum(val)
	i = i +1
print(round(soma,2))

-- EXECUTION TIME:
0.499354
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:01) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val)-80
	else:
		soma=sum(val
	i = i +1
print(round(soma,2))

-- ERROR:
File "XXXX", line 12
    i = i +1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:38) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val)-80
	else:
		soma=sum(val
		i = i +1
print(round(soma,2))

-- ERROR:
File "XXXX", line 12
    i = i +1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:49) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val)-80
	else:
		soma=sum(val
	i = i +1
print(round(soma,2))

-- ERROR:
File "XXXX", line 12
    i = i +1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:49) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val)-80
	else:
		soma=sum(val
	i = i +1
print(round(soma,2))

-- ERROR:
File "XXXX", line 12
    i = i +1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:56) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val)-80
	else:
		soma=sum(val
i = i +1
print(round(soma,2))

-- ERROR:
File "XXXX", line 12
    i = i +1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:09) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val)-80
	else:
		soma=sum(val
   i = i +1
print(round(soma,2))

-- ERROR:
File "XXXX", line 12
    i = i +1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:15) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val)-80
	else:
		soma=sum(val)
   i = i +1
print(round(soma,2))

-- ERROR:
File "XXXX", line 12
    i = i +1
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:39) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val)-80
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:39) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val)-80
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:27:00) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val)-80
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
0.352543
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:19) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 89:
		soma=sum(val)-89
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:39) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 
		soma=sum(val)
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    if valor[i] > 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:39) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 
		soma=sum(val)
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    if valor[i] > 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:39) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80
		soma=sum(val)
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    if valor[i] > 80
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:39) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80
		soma=sum(val)
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    if valor[i] > 80
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:59) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i]
		soma=sum(val)
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    if valor[i]
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:05) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
File "XXXX", line 8
    if valor[i] > 80
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:21) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:29:28) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
0.439807
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:37) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:31:45) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
0.473761
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:45) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:45) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:31:47) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
2.64989
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:31:47) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
1.5589
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:31:48) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
2.50282
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:31:49) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
2.85033
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:31:51) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
2.66636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:31:54) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
3.54675
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:31:56) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
2.91828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:56) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:56) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:56) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:56) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:31:56) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
3.3435
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:31:57) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
3.01628
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:31:57) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
3.83084
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:31:57) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
3.00594
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:31:57) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
2.59359
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:20) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else: 
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:33:09) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
0.564437
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:14) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:30) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:46) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:33:51) 
-- CODE:
from numpy import*

val= array(input('vetores: '))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
0.30665
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 8, in <module>
    if valor[i] > 80:
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:15) 
-- CODE:
from numpy import*

valor= array(eval(input('vetores: ')))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:34:21) 
-- CODE:
from numpy import*

valor= array(eval(input('vetores: ')))

i =0

while  i < size(val):
	if valor[i] > 80:
		soma=sum(val) -80
	else:
		soma=sum(val)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
0.407986
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1599/main.py", line 7, in <module>
    while  i < size(val):
NameError: name 'val' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:46) 
-- CODE:
from numpy import*

valor= array(eval(input('vetores: ')))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma=sum(valor) -80
	else:
		soma=sum(valor)
		i = i +1
print(round(soma,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:34:54) 
-- CODE:
from numpy import*

valor= array(eval(input('vetores: ')))

i =0

while  i < size(valor):
	if valor[i] > 80:
		soma=sum(valor) -80
	else:
		soma=sum(valor)
		i = i +1
print(round(soma,2))

-- EXECUTION TIME:
0.444358
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
